implementacion roles hateos swagger mokito j unit